--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-query-devtools": "^5.51.23",
+    "@types/react-modal": "^3.16.3",
+    "antd": "^5.20.1",
     "boring-avatars": "^1.10.2",
     "firebase": "^10.12.5",
     "js-md5": "^0.8.3",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "redux": "^5.0.1"
